--- a/Areas/Admin/Views/HomeAdmin/Add_Teacher.cshtml
+++ b/Areas/Admin/Views/HomeAdmin/Add_Teacher.cshtml
@@ -7,6 +7,14 @@
     <div class="col display-5" style="text-align:center">Thêm giáo viên</div>
 </div>
 <Hr />
+<div class="row">
+    @if (!string.IsNullOrEmpty(ViewBag.ErrorMessage))
+    {
+        <div class="alert alert-danger text-center" role="alert" style="font-size:24px; display:none">
+            @ViewBag.ErrorMessage
+        </div>
+    }
+</div>
 <form class="row" action="@Url.Action("Submit_Add_Teacher", "HomeAdmin", new { area = "Admin" })" id="inputForm">
     <div class="col-sm-12 col-md-6 col-xl-4 mb-3 mt-3">
         <label for="" class="form-label">Mã giáo viên:</label>
@@ -111,6 +119,14 @@
                 event.preventDefault();
             }
         });
+        var errorMessage = "@ViewBag.ErrorMessage";
+        if (errorMessage) {
+            $(".alert").show();
+
+            setTimeout(function () {
+                $(".alert").hide();
+            }, 5000);
+        }
     });
 </script>
 
