--- a/Areas/Admin/Views/HomeAdmin/Manage_Student.cshtml
+++ b/Areas/Admin/Views/HomeAdmin/Manage_Student.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Quản lý học viên";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutPageAdmin.cshtml";
     web2.Models.quanLyTrungTamDayDanEntities db = new web2.Models.quanLyTrungTamDayDanEntities();
-    
+
 }
 
 <div class="container">
@@ -35,6 +35,11 @@
     <hr />
     <div class="row">
         <h3 class="col" style="text-align:center">Bảng kết quả</h3>
+    </div>
+    <div class="row">
+        <div class="alert alert-danger text-center" role="alert" style="font-size: 20px; display: none;">
+            @ViewBag.ErrorMessage
+        </div>
     </div>
     <div class="row">
         <table class="table " style="text-align:center">
@@ -83,18 +88,33 @@
                         {
                             <td class="text-danger">Chưa đóng học phí</td>
                         }
-                    <td colspan="2" style="display:inline-flex">
-                        <a>@Html.ActionLink("Sửa", "Edit_Student_Infor", "HomeAdmin", new { area = "Admin", maHocVien = item.Ma_hoc_vien }, new { @class = "btn btn-primary" })</a>
-                        <form id="form-delete-@item.Ma_hoc_vien" action="@Url.Action("Delete_Student_Infor", "HomeAdmin", new { area = "Admin" })" method="post">
-                            <input type="hidden" name="maHocVien" value="@item.Ma_hoc_vien" />
-                            <button type="submit" class="btn btn-success">Xoá</button>
-                        </form>
-                    </td>
+                        <td colspan="2" style="display:inline-flex">
+                            <a>@Html.ActionLink("Sửa", "Edit_Student_Infor", "HomeAdmin", new { area = "Admin", maHocVien = item.Ma_hoc_vien }, new { @class = "btn btn-primary" })</a>
+                            <form id="form-delete-@item.Ma_hoc_vien" action="@Url.Action("Delete_Student_Infor", "HomeAdmin", new { area = "Admin" })" method="post">
+                                <input type="hidden" name="maHocVien" value="@item.Ma_hoc_vien" />
+                                <button type="submit" class="btn btn-success">Xoá</button>
+                            </form>
+                        </td>
                     </tr>
                 }
             </tbody>
         </table>
-        
+
     </div>
 </div>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script>
+    $(document).ready(function () {
+        // Kiểm tra xem có thông báo lỗi không
+        var errorMessage = "@ViewBag.ErrorMessage";
+        if (errorMessage) {
+
+            $(".alert").show();
+
+            setTimeout(function () {
+                $(".alert").hide();
+            }, 5000);
+        }
+    });
+</script>
 
