--- a/Areas/Admin/Views/HomeAdmin/Manage_Teacher.cshtml
+++ b/Areas/Admin/Views/HomeAdmin/Manage_Teacher.cshtml
@@ -36,6 +36,11 @@
         <h3 class="col" style="text-align:center">Bảng kết quả</h3>
     </div>
     <div class="row">
+        <div class="alert alert-danger text-center" role="alert" style="font-size: 20px; display: none;">
+            @ViewBag.ErrorMessage
+        </div>
+    </div>
+    <div class="row">
         <table class="table " style="text-align:center">
             <thead class="bg-info bg-gradient">
                 <tr>
@@ -88,6 +93,21 @@
                 }
             </tbody>
         </table>
-        
+
     </div>
 </div>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script>
+    $(document).ready(function () {
+        // Kiểm tra xem có thông báo lỗi không
+        var errorMessage = "@ViewBag.ErrorMessage";
+        if (errorMessage) {
+
+            $(".alert").show();
+
+            setTimeout(function () {
+                $(".alert").hide();
+            }, 5000);
+        }
+    });
+</script>
