--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -3,5 +3,60 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Active = "contact";
 }
+<!DOCTYPE html>
 
+<html>
+<head>
+    <link rel="stylesheet" type="text/css" href="~/Content/StudentSite.css" />
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <meta name="viewport" content="width=device-width" />
+    <title>ContactStudent</title>
+
+
+</head>
+<body>
+    <div class="container">
+        <h1 style="font-family:Arial">LIÊN HỆ VỚI CHÚNG TÔI</h1>
+        <form action="#" method="post">
+            <div class="row ">
+                <div class="col-md-6 col-lg-6 col-sm-12 mt-3">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">
+                            <i class="fa-solid fa-user" style="color: #1093a7;"></i> <!-- Sử dụng icon person từ Bootstrap Icons color:16 ;147 ;167 -->
+                        </span>
+                        <input type="text" class="form-control" id="user" maxlength="50" placeholder="Nhập tên của bạn ở đây, ví dụ: Nguyễn Văn A, Trần Thị B">
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-6 col-sm-12 mt-3">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">
+                            <i class="fa-solid fa-phone" style="color: #1093a7;"></i>
+                        </span>
+                        <input type="tel" class="form-control" id="phone" maxlength="11" placeholder="Nhập số điện thoại của bạn ở đây">
+                    </div>
+                </div>
+            </div>
+            <div class="mb-3 mt-3">
+                <div class="input-group mb-3">
+                    <span class="input-group-text ">
+                        <i class="fa-solid fa-envelope" style="color: #1093a7;"></i>
+                    </span>
+                    <input type="email" class="form-control" id="email" placeholder="Nhập email của bạn ở đây">
+                </div>
+            </div>
+            <div class="mb-3 mt-3">
+                <div class="input-group mb-3">
+                    <span class="input-group-text">
+                        <i class="fa-solid fa-comment" style="color: #1093a7;"></i>
+                    </span>
+                    <textarea class="form-control" id="message" placeholder="Nội dung liên hệ của bạn"></textarea>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Gửi Đi</button>
+        </form>
+    </div>
+</body>
+</html>
 
