--- a/Areas/Student/Views/HomeStudent/CourseStudent.cshtml
+++ b/Areas/Student/Views/HomeStudent/CourseStudent.cshtml
@@ -1,4 +1,5 @@
 ﻿@model List<web2.Models.KhoaHoc>
+
 @{
     ViewBag.Title = "CourseStudent";
     Layout = "~/Areas/Student/Views/Shared/_LayoutStudent.cshtml";
@@ -15,7 +16,7 @@
     <link rel="stylesheet" type="text/css" href="~/Content/Study.css" />
     <style>
         .card {
-            height: 610px;
+            height: auto;
         }
 
             .card img {
