--- a/Areas/Student/Views/HomeStudent/settingAccount.cshtml
+++ b/Areas/Student/Views/HomeStudent/settingAccount.cshtml
@@ -1,8 +1,9 @@
-﻿
+﻿@model List<web2.Models.KhoaHoc>
 @{
     ViewBag.Title = "settingAccount";
     Layout = "~/Areas/Student/Views/Shared/_LayoutStudent.cshtml";
     ViewBag.Active = "settingaccount";
+    web2.Models.quanLyTrungTamDayDanEntities db = new web2.Models.quanLyTrungTamDayDanEntities();
 }
 
 <!DOCTYPE html>
