--- a/Areas/Teacher/Views/HomeTeacher/Manage_Classes.cshtml
+++ b/Areas/Teacher/Views/HomeTeacher/Manage_Classes.cshtml
@@ -1,5 +1,6 @@
 ﻿@model List<web2.Models.LopHoc>
 
+
 @{
     ViewBag.Title = "Manage Classes";
     Layout = "~/Areas/Teacher/Views/Shared/_LayoutPageTeacher.cshtml";
@@ -21,8 +22,6 @@
                         <th>Student Count</th>
                         <th>Description</th>
                         <th>Timetable ID</th>
-                        <th>Add Document</th> <!-- New column for the button -->
-                        <!-- Add more columns as needed -->
                     </tr>
                 </thead>
                 <tbody>
@@ -36,10 +35,6 @@
                             <td>@lopHoc.So_luong_hoc_vien</td>
                             <td>@lopHoc.Mo_ta</td>
                             <td>@lopHoc.Ma_thoi_gian_bieu</td>
-                            <td>
-                                <a href="@Url.Action("AddDocument", "HomeTeacher", new { classId = lopHoc.Ma_lop })" class="btn btn-primary">Add Document</a>
-                            </td>
-                            <!-- Add more cells based on your model properties -->
                         </tr>
                     }
                 </tbody>
@@ -53,6 +48,7 @@
         <div class="row">
             <div class="col-md-12">
                 <a href="@Url.Action("Index", "HomeTeacher")" class="btn btn-primary">Trở lại</a>
+                <a href="@Url.Action("AddDocument", "HomeTeacher")" class="btn btn-primary">Lớp của tôi</a>
             </div>
         </div>
     </div>
