--- a/Areas/Teacher/Views/HomeTeacher/Manage_Document.cshtml
+++ b/Areas/Teacher/Views/HomeTeacher/Manage_Document.cshtml
@@ -54,7 +54,7 @@
         </div>
 
         <div id="document-form">
-            <!-- Nút để chuyển hướng đến trang thêm tài liệu -->
+            <a href="@Url.Action("Index", "HomeTeacher")" class="btn btn-primary">Trở lại</a>
             <a href="@Url.Action("AddDocument", "HomeTeacher")" class="btn btn-success">Thêm Tài liệu</a>
         </div>
     </div>
