--- a/Areas/Teacher/Views/HomeTeacher/Manage_Schedule.cshtml
+++ b/Areas/Teacher/Views/HomeTeacher/Manage_Schedule.cshtml
@@ -38,4 +38,9 @@
             </tbody>
         </table>
     </div>
+    <div class="row">
+        <div class="col-md-12">
+            <a href="@Url.Action("Index", "HomeTeacher")" class="btn btn-primary">Trở lại</a>
+        </div>
+    </div>
 </div>
