--- a/Areas/Student/Views/HomeStudent/StudyStudent.cshtml
+++ b/Areas/Student/Views/HomeStudent/StudyStudent.cshtml
@@ -49,7 +49,7 @@
                                 </p>
                             </div>
                             <div class="card-footer d-flex justify-content-between">
-                                <div> <p class="card-text">Học Phí: @kh.Hoc_phi$</p></div>
+                                <div> <p class="card-text">Học Phí: <strong style="color:brown">@kh.Hoc_phi$</strong> </p></div> 
                                 <div style="float: right;">
                                     <button class="btn btn-outline-warning rounded-0 registerButton" data-course-id="@kh.Ma_khoa_hoc">Đăng Ký</button>
                                 </div>
@@ -59,6 +59,8 @@
                     </div>
                 </div>
             }
+
+
             <script>
                  var registerButtons = document.querySelectorAll('.registerButton');
                    registerButtons.forEach(function(button) {
@@ -66,7 +68,6 @@
                        event.preventDefault();
                   var courseId = button.getAttribute('data-course-id');
                   var confirmation = confirm("Bạn muốn đăng ký khoá học này?");
-
                      if (confirmation) {
                         var url = '@Url.Action("CourseStudent", "HomeStudent", new { area = "Student", courseId = "__courseId__" })';
                         url = url.replace('__courseId__', courseId);
