--- a/Areas/Student/Views/HomeStudent/settingAccount.cshtml
+++ b/Areas/Student/Views/HomeStudent/settingAccount.cshtml
@@ -1,9 +1,8 @@
-﻿@model List<web2.Models.KhoaHoc>
+﻿
 @{
     ViewBag.Title = "settingAccount";
     Layout = "~/Areas/Student/Views/Shared/_LayoutStudent.cshtml";
     ViewBag.Active = "settingaccount";
-    web2.Models.quanLyTrungTamDayDanEntities db = new web2.Models.quanLyTrungTamDayDanEntities();
 }
 
 <!DOCTYPE html>
@@ -32,10 +31,7 @@
                     <div class="card-body">
                         <ul class="list-group">
                             <li class="list-group-item">
-                                <strong>Tên đăng nhập:</strong> <input type="text" class="form-control" value="datle8897">
-                            </li>
-                            <li class="list-group-item">
-                                <strong>Tên:</strong> <input type="text" class="form-control" value="Lê Thành Đạt">
+                                <strong>Họ Và Tên:</strong> <input type="text" class="form-control" value="Lê Thành Đạt">
                             </li>
                             <li class="list-group-item">
                                 <strong>Email:</strong> <input type="email" class="form-control" value="abc@Gmail.com" />
@@ -47,17 +43,12 @@
                                 <strong>Số điện thoại:</strong> <input type="number" class="form-control" value="0987654321">
                             </li>
                             <li class="list-group-item">
-                                <strong>Giới tính:</strong>
-                                <input type="radio" name="gender" value="male" checked> Nam
-                                <input type="radio" name="gender" value="female"> Nữ
-                            </li>
-                            <li class="list-group-item">
                                 <strong>Ngày sinh:</strong> <input type="date" class="form-control" value="">
                             </li>
                         </ul>
                     </div>
                     <div class="card-footer">
-                        <button type="button" class="btn btn-primary">Chỉnh sửa</button>
+                        <button type="button" class="btn btn-primary">Chỉnh Sửa</button> 
                     </div>
                 </div>
             </div>
