--- a/Areas/Admin/Views/Shared/_LayoutPageAdmin.cshtml
+++ b/Areas/Admin/Views/Shared/_LayoutPageAdmin.cshtml
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang quản lý Phố Thị Music</title>
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/bootstrap")
+    @Styles.Render("~/Views/Home/style/css")
     <link rel="stylesheet" href="~/Areas/Admin/Style/adminSite.css" />
     <script src="https://kit.fontawesome.com/ae360af17e.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
