--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -12,7 +12,7 @@
 </head>
 
 
-<script>
+@*<script>
 
     function checkCredentials() {
         var username = document.getElementById('user').value;
@@ -27,7 +27,7 @@
     }
 
 
-</script>
+</script>*@
 
 
 <Body>
@@ -49,12 +49,12 @@
 
 
 
-                    <form action="@Url.Action("Check_Dangnhap", "Home")">
+                    <form action="@Url.Action("Check_Dangnhap", "Home")" method="post">
                         <div class="input-group mb-3">
-                            <input type="text" value="" id="user" class="form-control form-control-lg bg-light fs-6 " placeholder="Tài Khoản" />
+                            <input type="text" value="" id="user" class="form-control form-control-lg bg-light fs-6 " placeholder="Tài Khoản" name="user"/>
                         </div>
                         <div class="input-group mb-1">
-                            <input type="password" value="" id="pass" class="form-control form-control-lg bg-light fs-6 " placeholder="Mật Khẩu" />
+                            <input type="password" value="" id="pass" class="form-control form-control-lg bg-light fs-6 " placeholder="Mật Khẩu" name="pass"/>
                         </div>
 
 
